--- a/appDev/app6K/app/style/app_components/zetka/zetka-modifyers.scss
+++ b/appDev/app6K/app/style/app_components/zetka/zetka-modifyers.scss
@@ -28,4 +28,4 @@ $margin-def:  $margin-def; // 3.2rem
     background-color: rgba(0,0,0,0.1);
 }
 
-/* EOF helpers classes */
+/* EOF zetka-modifyers */
