--- a/appDev/app6K/app/style/app_core/02-reset-html.scss
+++ b/appDev/app6K/app/style/app_core/02-reset-html.scss
@@ -4,6 +4,9 @@
 ============================================================== */
 
 
+$dim: $dim; // 0.8rem;
+
+
 /* ------------------------------------ minimal box model */
 
 
