--- a/appDev/app6K/app/style/app_removed/grid-for-article/grid-for-article.scss
+++ b/appDev/app6K/app/style/app_removed/grid-for-article/grid-for-article.scss
@@ -1,6 +1,7 @@
 /* ==============================================================
     grid for article layout (main+aside+extra)
     2018.12.7
+    Deprecated in 2019 → zetka
 ============================================================== */
 
 
