--- a/appDev/app6K/app/style/app_core/content-typography.scss
+++ b/appDev/app6K/app/style/app_core/content-typography.scss
@@ -23,19 +23,35 @@ $font-list-collection--tufte-sans:
     "Gill Sans MT",
     sans-serif;
 
+// native font stack 2018
+
+$font-list-collection--native-sans-serif:
+  // Safari for macOS and iOS (San Francisco)
+  -apple-system,
+  // Chrome < 56 for macOS (San Francisco)
+  BlinkMacSystemFont,
+  // Windows
+  "Segoe UI",
+  // Android
+  "Roboto",
+  // Basic web fallback
+  "Helvetica Neue", Arial, sans-serif,
+  // Emoji fonts
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+
 // summary
 
 $font-list-serif: $font-list-collection--tufte-serif;
-$font-list-sans:  $font-list-collection--tufte-sans;
+$font-list-sans:  $font-list-collection--native-sans-serif;
 
 
 //* ------------------------------------ font-depended variables
 
 
-$fontSize:     $fontSize;     // 16px
-$fontRegular:  $fontRegular;  // 400;
-$fontSemibold: $fontSemibold; // 400;
-$fontBolder:   $fontBolder;   // 700;
+$fontSize:     16px;
+$fontRegular:  400;
+$fontSemibold: 400;
+$fontBolder:   700;
 
 
 //* ------------------------------------ body base
