--- a/appDev/app6K/app/style/app_core/03-core-html-markup.scss
+++ b/appDev/app6K/app/style/app_core/03-core-html-markup.scss
@@ -1,10 +1,12 @@
 /* ==============================================================
-    html base css 1004
-    2019.1.16
+    base html markup
+    2019.1.23
 ============================================================== */
 
 
 $dim: $dim; // 0.8rem;
+$margin-less: $margin-less; // 2rem
+$margin-def:  $margin-def; // 3.2rem
 
 
 /* ------------------------------------ minimal box model */
@@ -173,5 +175,35 @@ button, .button, .is-button {
     line-height: inherit;
 }
 
+/* ------------------------------------------ univeral helpers */
 
-/* eof html base */
+$margin-less: $margin-less; // 2rem
+$margin-def:  $margin-def; // 3.2rem
+
+.is-centered { text-align: center; justify-content: center; }
+
+.is-v-centered      { align-self: center; }
+.has-v-centered>*   { align-self: center; }
+
+.is-v-equal         { align-self: stretch; }
+.has-v-equal>*      { align-self: stretch; }
+
+.has-v-slices       { grid-row-gap: 0; }
+
+.is-v-spaced {
+    margin-top:    $margin-less;
+    margin-bottom: $margin-less;
+}
+.is-v-padded {
+    padding-top:    $margin-def;
+    padding-bottom: $margin-def;
+}
+
+.is-box {
+    padding-top:    $margin-less;
+    padding-bottom: $margin-less;
+    background-color: rgba(0,0,0,0.1);
+}
+
+
+/* eof base html markup */
