--- a/appDev/app6K/app/style/app.css
+++ b/appDev/app6K/app/style/app.css
@@ -9,8 +9,87 @@
 ============================================================== */
 /* eof required settings */
 /* ==============================================================
-    html base css 1004
+    all about font-sizes and line-heights
     2019.1.16
+============================================================== */
+body {
+  /* 16/28 */
+  font-size: 16px;
+  line-height: 1.75;
+  font-family: Vollkorn, et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+  font-weight: 400; }
+
+h1, h2, h3, h4, h5, h6, p, blockquote {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  font-weight: inherit; }
+
+h1, .big-title {
+  /* 40/48 */
+  font-size: 2.5em;
+  line-height: 1.2; }
+
+h2, .title {
+  /* 32/40 */
+  font-size: 2em;
+  line-height: 1.25; }
+
+h3, .min-title {
+  /* 24/32 */
+  font-size: 1.5em;
+  line-height: 1.333333; }
+
+.subtitle {
+  /* 20/24 */
+  font-size: 1.25em;
+  line-height: 1.2; }
+
+small {
+  /* 14/28 */
+  font-size: 0.875em;
+  line-height: 2; }
+
+td {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  /* 14/24 */
+  font-size: 0.875em;
+  line-height: 1.714285; }
+
+.has-text-accent {
+  font-weight: 400;
+  /* 24/36 */
+  font-size: 1.5em;
+  line-height: 1.5; }
+
+.has-small-text {
+  /* 14/24 */
+  font-size: 0.875em;
+  line-height: 1.714285; }
+
+.has-sans-text {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  letter-spacing: .03em;
+  /* 14/24 */
+  font-size: 0.875em;
+  line-height: 1.714285; }
+
+@supports (hanging-punctuation: first) {
+  * {
+    hanging-punctuation: first; } }
+
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; }
+
+body {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased; }
+
+/* eof typography */
+/* ==============================================================
+    base html markup
+    2019.1.23
 ============================================================== */
 /* ------------------------------------ minimal box model */
 *, *:before, *:after {
@@ -164,86 +243,40 @@ button, .button, .is-button {
   font-size: inherit;
   line-height: inherit; }
 
-/* eof html base */
-/* ==============================================================
-    all about font-sizes and line-heights
-    2019.1.16
-============================================================== */
-body {
-  /* 16/28 */
-  font-size: 16px;
-  line-height: 1.75;
-  font-family: Vollkorn, et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-  font-weight: 400; }
+/* ------------------------------------------ univeral helpers */
+.is-centered {
+  text-align: center;
+  justify-content: center; }
 
-h1, h2, h3, h4, h5, h6, p, blockquote {
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  font-weight: inherit; }
+.is-v-centered {
+  align-self: center; }
 
-h1, .big-title {
-  /* 40/48 */
-  font-size: 2.5em;
-  line-height: 1.2; }
+.has-v-centered > * {
+  align-self: center; }
 
-h2, .title {
-  /* 32/40 */
-  font-size: 2em;
-  line-height: 1.25; }
+.is-v-equal {
+  align-self: stretch; }
 
-h3, .min-title {
-  /* 24/32 */
-  font-size: 1.5em;
-  line-height: 1.333333; }
+.has-v-equal > * {
+  align-self: stretch; }
 
-.subtitle {
-  /* 20/24 */
-  font-size: 1.25em;
-  line-height: 1.2; }
+.has-v-slices {
+  grid-row-gap: 0; }
 
-small {
-  /* 14/28 */
-  font-size: 0.875em;
-  line-height: 2; }
+.is-v-spaced {
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
 
-td {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  /* 14/24 */
-  font-size: 0.875em;
-  line-height: 1.714285; }
+.is-v-padded {
+  padding-top: 2.4rem;
+  padding-bottom: 2.4rem; }
 
-.has-text-accent {
-  font-weight: 400;
-  /* 24/36 */
-  font-size: 1.5em;
-  line-height: 1.5; }
+.is-box {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: rgba(0, 0, 0, 0.1); }
 
-.has-small-text {
-  /* 14/24 */
-  font-size: 0.875em;
-  line-height: 1.714285; }
-
-.has-sans-text {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  letter-spacing: .03em;
-  /* 14/24 */
-  font-size: 0.875em;
-  line-height: 1.714285; }
-
-@supports (hanging-punctuation: first) {
-  * {
-    hanging-punctuation: first; } }
-
-html {
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%; }
-
-body {
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased; }
-
-/* eof typography */
+/* eof base html markup */
 /* ==============================================================
     box model for HTML & BODY
     2018.12.7
@@ -536,36 +569,6 @@ $zetka-half-screen-two                    in][][][side][]-
   .zetka-as-main {
     grid-template-columns:  [  full-start overmain-start overside-start overmenu-start menu-start side-start main-start a  ]  1fr  [b]  1fr  [c]  1fr  [d midmenu midpoint midside]  1fr  [e]  1fr  [f]  1fr  [  main-end g menu-end side-end overmain-end overside-end overmenu-end full-end  ] ; } }
 /* EOF zetka columns */
-/* ------------------------------------------ helpers classes */
-.is-v-centered {
-  align-self: center; }
-
-.has-v-centered > * {
-  align-self: center; }
-
-.is-v-equal {
-  align-self: stretch; }
-
-.has-v-equal > * {
-  align-self: stretch; }
-
-.has-v-slices {
-  grid-row-gap: 0; }
-
-.is-v-spaced {
-  margin-top: 2rem;
-  margin-bottom: 2rem; }
-
-.is-v-padded {
-  padding-top: 2.4rem;
-  padding-bottom: 2.4rem; }
-
-.is-box {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  background-color: rgba(0, 0, 0, 0.1); }
-
-/* EOF zetka-modifyers */
 /* ==============================================================
     data table - Responsive Data Tables
     2019.1.17
