--- a/appDev/app6K/app/style/app_components/sidebar/sidebar.scss
+++ b/appDev/app6K/app/style/app_components/sidebar/sidebar.scss
@@ -1,7 +1,13 @@
 /* ==============================================================
     fixed sidebar with visible and hidden states
-    2018.5.12
+    2019.1.28
 ============================================================== */
+
+/* USE CASE
+    <nav class="sidebar is-active">
+        xoxox
+    </nav>
+*/
 
 
 //* ------------------------------------ settings
@@ -22,7 +28,7 @@ $screenNotFullscreenSidebar: 'min-width: #{ $a + $b }';
 
 
 .sidebar {
-    background-color: $color_main_back;
+    background-color: black;
 
     /* is screen fixed */
     position: fixed;
@@ -45,11 +51,15 @@ $screenNotFullscreenSidebar: 'min-width: #{ $a + $b }';
     transition: transform 200ms ease-in;
 
     /* open state */
-    &.is-active {
+    &.is-active,
+    .has-active-sidebar & {
         transition-timing-function: ease-out;
         transform: translateX(-100%);
     }
 }
+
+/* Mod: use shadow overlay */
+.has-active-sidebar { @extend %screen-has-shadow-overlay; }
 
 
 /* eof sidebar */
