--- a/appDev/app6K/app/style/app_components/zetka/zetka-formula.scss
+++ b/appDev/app6K/app/style/app_components/zetka/zetka-formula.scss
@@ -24,7 +24,7 @@ $zetka--column-gap:     1.0rem;
 $zetka--row-gap:        1.0rem;
 
 $zetka--screenspacer:   minmax(0, 1fr);
-$zetka--overmainspacer: 0; // 1rem;
+$zetka--overmainspacer: 1rem; // 0;
 
 $zetka--width-menu:     16vw;
 $zetka--width-side:     16vw;
