--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -309,7 +309,7 @@ faq {
 }
 
 /* COMPLETE RESET */
-html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video 
+html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video
 {	margin: 0;	padding: 0;	border: 0;	font-size: 100%;	font: inherit;	vertical-align: baseline; text-align: left;}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {	display: block;}
 body {	line-height: 1;}
@@ -349,3 +349,8 @@ base, basefont, datalist, head, meta, script, style, title, noembed, param, temp
     margin-left: calc(-1 * var(--grid-gutter));
     margin-right: calc(-1 * var(--grid-gutter));
 }
+
+/* flex tricks */
+
+https://css-tricks.com/putting-the-flexbox-albatross-to-real-use/
+flex-basis: calc(560px * 999 - 100% * 999)
