--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -224,6 +224,11 @@ page-break-inside : auto | avoid
     }
 }
 
+@supports (clip-path:polygon(0 0, 50% 50%, 100% 0)) {
+    clip-path: polygon(0 -1px, 100% -1px, 100% 100%, 0 100%, $padding--mid 50%);
+    padding-left: $padding--mid + $padding--def;
+}
+
 @font-face {
   font-family: 'AppFont';
   src: url(data:application/x-font-woff;-------) format('woff');
