--- a/appZapp/app/styles/app.scss
+++ b/appZapp/app/styles/app.scss
@@ -54,4 +54,6 @@
 /* Customs */
 // ---------------------------------------------------------------
 
+// sakura
+// @import "app_item/plain-markup-design/plain-markup-design";
 
