--- a/appZapp/app/styles/app_item/group/group.scss
+++ b/appZapp/app/styles/app_item/group/group.scss
@@ -21,6 +21,12 @@ $margin-def: $margin-def; // 2.4rem;
     /* has overflow fallback */
     overflow: auto;
 
+    /* has mobile layout */
+    @media ($screenForMobile) {
+        grid-auto-flow: row;
+        grid-auto-rows: unset;
+    }
+
 }
 
 
