--- a/appZapp/app/styles/app_core/04-core-typography.scss
+++ b/appZapp/app/styles/app_core/04-core-typography.scss
@@ -122,6 +122,12 @@ td {
     line-height: 1.714285;
 }
 
+%text-is-larger {
+    /* 20/28 */
+    font-size:   1.25em;
+    line-height: 1.4;
+}
+
 
 //* ------------------------------------ extra support
 
